client/app/assets/css/upstream-xml2rfc.css
/**

This was forked from
https://github.com/ietf-tools/xml2rfc/blob/main/xml2rfc/data/xml2rfc.css

*/

/* fonts */
:root {
  --font-sans: Arial, Helvetica, sans-serif;
  --font-serif: 'Times', 'Times New Roman', serif;
  --font-mono: 'Roboto Mono', Courier, 'Courier New', monospace;
}

@viewport {
  zoom: 1;
}
@-ms-viewport {
  width: extend-to-zoom;
  zoom: 1;
}
/* general and mobile first */
.ears {
  display: none;
}

/* headings */
#title,
h1,
h2,
h3,
h4,
h5,
h6 {
  margin: 1em 0 0.5em;
  font-weight: bold;
  padding: 0 var(--layout-bleed-right) 0 var(--layout-bleed-left);
}
#title,
h1,
h2,
h3,
h4,
h5,
h6,
li,
address {
  line-height: 1.5;
}

#title {
  clear: both;
  border-bottom: 1px solid #ddd;
  margin: 0 0 0.5em 0;
  padding: 1em 0 0.5em;
}
.author {
  padding-bottom: 4px;
}
h1 {
  font-size: 26px;
  margin: 1em 0;
}
h2 {
  font-size: 22px;
  margin-top: -20px; /* provide offset for in-page anchors */
  padding-top: 33px;
}
h3 {
  font-size: 18px;
  margin-top: -36px; /* provide offset for in-page anchors */
  padding-top: 42px;
}
h4 {
  font-size: 16px;
  margin-top: -36px; /* provide offset for in-page anchors */
  padding-top: 42px;
}
h5,
h6 {
  font-size: 14px;
}
#n-copyright-notice {
  border-bottom: 1px solid #ddd;
  padding-bottom: 1em;
  margin-bottom: 1em;
}
/* general structure */
p {
  padding: 0 var(--layout-bleed-right) 0 var(--layout-bleed-left);
  margin: 0 0 1em 0;
  text-align: left;
}
div {
  margin: 0;
}
.alignRight.art-text {
  background-color: #f9f9f9;
  border: 1px solid #eee;
  border-radius: 3px;
  padding: 1em 1em 0;
  margin-bottom: 1.5em;
}
.alignRight.art-text pre {
  padding: 0;
}
.alignRight {
  margin: 1em 0;
}
.alignRight > *:first-child {
  border: none;
  margin: 0;
  float: right;
  clear: both;
}
.alignRight > *:nth-child(2) {
  clear: both;
  display: block;
  border: none;
}
svg {
  display: block;
}
@media print {
  svg {
    max-height: 850px;
    max-width: 660px;
  }
}
svg[font-family~='serif' i],
svg [font-family~='serif' i] {
  font-family: var(--font-serif);
}
svg[font-family~='sans-serif' i],
svg [font-family~='sans-serif' i] {
  font-family: var(--font-sans);
}
svg[font-family~='monospace' i],
svg [font-family~='monospace' i] {
  font-family: var(--font-mono);
}
.alignCenter.art-text {
  background-color: #f9f9f9;
  border: 1px solid #eee;
  border-radius: 3px;
  padding: 1em 1em 0;
  margin-bottom: 1.5em;
}
.alignCenter.art-text pre {
  padding: 0;
}
.alignCenter {
  margin: 1em 0;
}
.alignCenter > *:first-child {
  margin: 0 auto;
}

/* lists */
ol,
ul {
  padding: 0;
  margin: 0 0 1em 2em;
}
ol ol,
ul ul,
ol ul,
ul ol {
  margin-left: 1em;
}
li {
  margin: 0 0 0.25em 0;
}
.ulCompact li {
  margin: 0;
}
ul.empty,
.ulEmpty {
  list-style-type: none;
}
ul.empty li,
.ulEmpty li {
  margin-top: 0.5em;
}
ul.ulBare,
li.ulBare {
  margin-left: 0em !important;
}
ul.compact,
.ulCompact,
ol.compact,
.olCompact {
  line-height: 100%;
  margin: 0 0 0 2em;
}

/* definition lists */
dl {
}
dl > dt {
  float: left;
  padding-left: var(--layout-bleed-left);
  padding-right: var(--layout-bleed-right);
  line-height: 2;
}
/* 
dl.nohang > dt {
  float: none;
}
*/
dl > dd {
  margin-bottom: 0.8em;
  min-height: 1.3em;
}
dd > p:first-child {
  padding: 0;
}
dl.compact > dd,
.dlCompact > dd {
  margin-bottom: 0em;
}
dl > dd > dl {
  margin-top: 0.5em;
  margin-bottom: 0em;
}

/* links */
a {
  text-decoration: none;
}
a[href] {
  color: #22e; /* Arlen: WCAG 2019 */
}
a[href]:hover {
  background-color: #f2f2f2;
}
figcaption a[href],
a[href].selfRef {
  color: #222;
}
/* XXX probably not this:
a.selfRef:hover {
  background-color: transparent;
  cursor: default;
} */

/* Figures */
tt,
code {
  background-color: #f9f9f9;
  font-family: var(--font-mono);
}
pre {
  margin: 0;
  padding: 1em;
}
img {
  max-width: 100%;
}
figure {
  margin: 0;
}
figure blockquote {
  margin: 0.8em 0.4em 0.4em;
}
figcaption {
  font-style: italic;
  margin: 0 0 1em 0;
  padding-left: var(--layout-bleed-left);
  padding-right: var(--layout-bleed-right);
}

/* aside, blockquote */
aside,
blockquote {
  margin-left: 0;
  padding: 1.2em 2em;
}
blockquote {
  background-color: #f9f9f9;
  color: #111; /* Arlen: WCAG 2019 */
  border: 1px solid #ddd;
  border-radius: 3px;
  margin: 1em 0;
}
blockquote > *:last-child {
  margin-bottom: 0;
}
cite {
  display: block;
  text-align: right;
  font-style: italic;
}
.xref {
  overflow-wrap: normal;
}

/* tables */
table {
  width: 100%;
  margin: 0 0 1em;
  border-collapse: collapse;
  border: 1px solid #eee;
}
th,
td {
  text-align: left;
  vertical-align: top;
  padding: 0.5em 0.75em;
}
th {
  text-align: left;
  background-color: rgba(0, 0, 0, 0.1);
}
tr:nth-child(2n + 1) > td {
  background-color: #f5f5f5;
}
table caption {
  font-style: italic;
  margin: 0;
  padding-left: var(--layout-bleed-left);
  padding-right: var(--layout-bleed-right);
  text-align: left;
}
table p {
  /* XXX to avoid bottom margin on table row signifiers. If paragraphs should
     be allowed within tables more generally, it would be far better to select on a class. */
  margin: 0;
}

/* pilcrow */
a.pilcrow {
  color: #666; /* Arlen: AHDJ 2019 */
  text-decoration: none;
  visibility: hidden;
  user-select: none;
  -ms-user-select: none;
  -o-user-select: none;
  -moz-user-select: none;
  -khtml-user-select: none;
  -webkit-user-select: none;
  -webkit-touch-callout: none;
}
@media screen {
  aside:hover > a.pilcrow,
  p:hover > a.pilcrow,
  blockquote:hover > a.pilcrow,
  div:hover > a.pilcrow,
  li:hover > a.pilcrow,
  pre:hover > a.pilcrow {
    visibility: visible;
  }
  a.pilcrow:hover {
    background-color: transparent;
  }
}

/* misc */
hr {
  border: 0;
  border-top: 1px solid #eee;
}
.bcp14 {
  font-variant: small-caps;
}

.role {
  font-variant: all-small-caps;
}

/* info block */
#identifiers {
  margin: 0;
  font-size: 0.9em;
}
#identifiers dt {
  width: 3em;
  clear: left;
}
#identifiers dd {
  float: left;
  margin-bottom: 0;
}
/* ... */

